# src/models/User.ts
@@ -1,16 +1,19 @@
 import mongoose, { Document, Schema, Model } from 'mongoose';
-import { messageSchema } from './Message';
 
 const userSchema: Schema = new Schema({
     userId: { type: String, required: true, unique: true },
-    clientId: { type: String, required: true, unique: false },
-    messages: [messageSchema], // Nested array of messages
+    name: { type: String, required: true, unique: false },
+    wppNumber: { type: String, required: true, unique: false },
+    email: { type: String, required: false, unique: false },
+    birthDate: { type: String, required: false, unique: false },
 });
 
 export interface IUser extends Document {
     userId: string;
     wppNumber: string;
     name: string;
+    email?: string;
+    birthDate?: string;
 }
 
 const UserModel = mongoose.model('User', userSchema);
